tools/tests/errors/surf_arity_08.experr
sorted() got an unexpected keyword argument 'bad'
